# swagger-output.json
@@ -203,6 +203,35 @@
         }
       }
     },
+    "/api/users/userInfo": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/api/users/user": {
       "post": {
         "tags": [
@@ -256,6 +285,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -405,11 +437,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -480,11 +507,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -516,11 +538,6 @@
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
             "type": "string"
           }
         ],
@@ -558,11 +575,6 @@
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
             "type": "string"
           }
         ],
@@ -736,11 +748,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -855,11 +862,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
           }
         ],
         "responses": {
@@ -891,11 +893,6 @@
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
             "type": "string"
           }
         ],
